--- a/enuoS/enuoS/Sections/Mine/View/SarchIllHosTableViewCell.xib
+++ b/enuoS/enuoS/Sections/Mine/View/SarchIllHosTableViewCell.xib
@@ -20,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SsG-3T-aiv">
-                        <rect key="frame" x="0.0" y="10" width="427" height="115"/>
+                        <rect key="frame" x="0.0" y="0.0" width="427" height="115"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="42U-tq-Pks">
                                 <rect key="frame" x="20" y="7" width="122" height="76"/>
@@ -103,9 +103,9 @@
                 </subviews>
                 <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="SsG-3T-aiv" firstAttribute="top" secondItem="Dbe-GN-evy" secondAttribute="top" constant="10" id="9hg-YO-myl"/>
+                    <constraint firstItem="SsG-3T-aiv" firstAttribute="top" secondItem="Dbe-GN-evy" secondAttribute="top" id="9hg-YO-myl"/>
                     <constraint firstItem="SsG-3T-aiv" firstAttribute="leading" secondItem="Dbe-GN-evy" secondAttribute="leading" id="CkD-QK-yO3"/>
-                    <constraint firstAttribute="bottom" secondItem="SsG-3T-aiv" secondAttribute="bottom" id="Gwf-JF-Sgq"/>
+                    <constraint firstAttribute="bottom" secondItem="SsG-3T-aiv" secondAttribute="bottom" constant="10" id="Gwf-JF-Sgq"/>
                     <constraint firstAttribute="trailing" secondItem="SsG-3T-aiv" secondAttribute="trailing" id="dPu-cF-5iS"/>
                 </constraints>
             </tableViewCellContentView>
@@ -118,7 +118,7 @@
                 <outlet property="priceLabel" destination="3di-oh-UnG" id="Nrf-Iz-YeO"/>
                 <outlet property="treatLabel" destination="SJP-1V-1nJ" id="6i6-4J-PDD"/>
             </connections>
-            <point key="canvasLocation" x="-146" y="123"/>
+            <point key="canvasLocation" x="1" y="82"/>
         </tableViewCell>
     </objects>
 </document>
