--- a/enuoS/enuoS/Resource/ZZSearchView.xib
+++ b/enuoS/enuoS/Resource/ZZSearchView.xib
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,10 +15,10 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DNc-p5-Mu7">
+                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DNc-p5-Mu7">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="圆角搜索.png" translatesAutoresizingMaskIntoConstraints="NO" id="ved-z7-KPR">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="圆角搜索.png" translatesAutoresizingMaskIntoConstraints="NO" id="ved-z7-KPR">
                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="dPp-uM-YxR">
@@ -32,7 +36,7 @@
                                 </mask>
                             </variation>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3u-wq-TZJ">
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3u-wq-TZJ">
                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="48K-b5-rlM"/>
@@ -42,7 +46,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                             <state key="normal" title="疾病">
-                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <variation key="default">
                                 <mask key="constraints">
@@ -61,7 +65,7 @@
                                 </mask>
                             </variation>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="下拉-拷贝.png" translatesAutoresizingMaskIntoConstraints="NO" id="cni-fv-ih0">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="下拉-拷贝.png" translatesAutoresizingMaskIntoConstraints="NO" id="cni-fv-ih0">
                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="12" id="O9p-wm-0Ub">
@@ -94,7 +98,7 @@
                                 </mask>
                             </variation>
                         </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="搜索" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Ve-LZ-HhX">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="搜索" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Ve-LZ-HhX">
                             <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="17" id="vR6-o3-Cbo">
@@ -114,7 +118,7 @@
                                 </mask>
                             </variation>
                         </textField>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bes-vk-E2J">
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bes-vk-E2J">
                             <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="38" id="0JP-KB-DUb"/>
@@ -124,7 +128,7 @@
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <state key="normal" title="取消">
-                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <variation key="default">
                                 <mask key="constraints">
@@ -146,7 +150,7 @@
                                 <action selector="ZZCancel:" destination="iN0-l3-epB" eventType="touchUpInside" id="SRA-r8-Sfn"/>
                             </connections>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="搜索.png" translatesAutoresizingMaskIntoConstraints="NO" id="6qu-ey-bj5">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="搜索.png" translatesAutoresizingMaskIntoConstraints="NO" id="6qu-ey-bj5">
                             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="18" id="Co8-cq-jNj"/>
@@ -166,7 +170,7 @@
                             </variation>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="bes-vk-E2J" secondAttribute="trailing" constant="11" id="84c-h8-360">
                             <variation key="heightClass=regular-widthClass=compact" constant="10"/>
@@ -217,26 +221,26 @@
                         </mask>
                         <mask key="constraints">
                             <exclude reference="wRH-Hn-0ru"/>
-                            <exclude reference="GYo-kA-4Qg"/>
-                            <exclude reference="PRe-4v-Pfg"/>
-                            <exclude reference="Ynh-td-KOg"/>
-                            <exclude reference="dur-rz-UF5"/>
-                            <exclude reference="h4B-84-LO4"/>
-                            <exclude reference="rRS-Um-CN5"/>
-                            <exclude reference="xzq-p1-Yu5"/>
-                            <exclude reference="D64-J0-6yb"/>
-                            <exclude reference="RpZ-QI-gRX"/>
-                            <exclude reference="SOM-Jn-XZB"/>
-                            <exclude reference="syx-mg-H1j"/>
-                            <exclude reference="X0c-vY-XpT"/>
-                            <exclude reference="YoG-Ku-bBH"/>
-                            <exclude reference="gLk-hP-qBL"/>
                             <exclude reference="EXt-CQ-lQP"/>
                             <exclude reference="dAT-07-oOE"/>
                             <exclude reference="84c-h8-360"/>
                             <exclude reference="UEH-8V-a5x"/>
                             <exclude reference="kPi-ZE-DKm"/>
                             <exclude reference="n7f-mc-bg0"/>
+                            <exclude reference="D64-J0-6yb"/>
+                            <exclude reference="RpZ-QI-gRX"/>
+                            <exclude reference="SOM-Jn-XZB"/>
+                            <exclude reference="syx-mg-H1j"/>
+                            <exclude reference="h4B-84-LO4"/>
+                            <exclude reference="rRS-Um-CN5"/>
+                            <exclude reference="xzq-p1-Yu5"/>
+                            <exclude reference="X0c-vY-XpT"/>
+                            <exclude reference="YoG-Ku-bBH"/>
+                            <exclude reference="gLk-hP-qBL"/>
+                            <exclude reference="GYo-kA-4Qg"/>
+                            <exclude reference="PRe-4v-Pfg"/>
+                            <exclude reference="Ynh-td-KOg"/>
+                            <exclude reference="dur-rz-UF5"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
@@ -250,31 +254,31 @@
                         </mask>
                         <mask key="constraints">
                             <include reference="wRH-Hn-0ru"/>
-                            <include reference="GYo-kA-4Qg"/>
-                            <include reference="PRe-4v-Pfg"/>
-                            <include reference="Ynh-td-KOg"/>
-                            <exclude reference="dur-rz-UF5"/>
-                            <include reference="h4B-84-LO4"/>
-                            <include reference="rRS-Um-CN5"/>
-                            <exclude reference="xzq-p1-Yu5"/>
-                            <include reference="D64-J0-6yb"/>
-                            <include reference="RpZ-QI-gRX"/>
-                            <exclude reference="SOM-Jn-XZB"/>
-                            <exclude reference="syx-mg-H1j"/>
-                            <include reference="X0c-vY-XpT"/>
-                            <include reference="YoG-Ku-bBH"/>
-                            <exclude reference="gLk-hP-qBL"/>
                             <include reference="EXt-CQ-lQP"/>
                             <include reference="dAT-07-oOE"/>
                             <include reference="84c-h8-360"/>
                             <include reference="UEH-8V-a5x"/>
                             <exclude reference="kPi-ZE-DKm"/>
                             <include reference="n7f-mc-bg0"/>
+                            <include reference="D64-J0-6yb"/>
+                            <include reference="RpZ-QI-gRX"/>
+                            <exclude reference="SOM-Jn-XZB"/>
+                            <exclude reference="syx-mg-H1j"/>
+                            <include reference="h4B-84-LO4"/>
+                            <include reference="rRS-Um-CN5"/>
+                            <exclude reference="xzq-p1-Yu5"/>
+                            <include reference="X0c-vY-XpT"/>
+                            <include reference="YoG-Ku-bBH"/>
+                            <exclude reference="gLk-hP-qBL"/>
+                            <include reference="GYo-kA-4Qg"/>
+                            <include reference="PRe-4v-Pfg"/>
+                            <include reference="Ynh-td-KOg"/>
+                            <exclude reference="dur-rz-UF5"/>
                         </mask>
                     </variation>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="ved-z7-KPR" secondAttribute="trailing" id="09f-IM-unR"/>
                 <constraint firstItem="DNc-p5-Mu7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="41" id="7WI-15-Gpj">
